Added email confirmation using sendgrid

--- a/src/app/features/authentication/login/login.html
+++ b/src/app/features/authentication/login/login.html
@@ -37,7 +37,7 @@
                 <button mat-flat-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading()"
                     class="w-full h-12 text-lg">
                     @if (isLoading()) {
-                    <mat-spinner diameter="24" class="mr-2 inline-block"></mat-spinner>
+                    <mat-spinner diameter="24" class="inline-block"></mat-spinner>
                     Signing in...
                     } @else {
                     Sign In
