--- a/src/app/features/authentication/register-component/register-component.html
+++ b/src/app/features/authentication/register-component/register-component.html
@@ -92,7 +92,7 @@
                 <button mat-flat-button color="primary" type="submit" [disabled]="registerForm.invalid || isLoading()"
                     class="w-full h-12 text-lg mt-4">
                     @if (isLoading()) {
-                    <mat-spinner diameter="24" class="mr-2 inline-block"></mat-spinner>
+                    <mat-spinner diameter="24" class="inline-block"></mat-spinner>
                     Creating Account...
                     } @else {
                     Sign Up
