passing product id - quantity to add to cart in product card - product details , add to wishlist button and pass product id  (#4)
* npm install

* Product service - module - components - models

* modify all product components and test the connections and API

* building product card - details - brand - category sliders

* Product (list- details -card ) slider (brand - category) search filter

* passing product id - quantity to add to cart , add wishlist button

--- a/src/app/features/shopping/product-details-component/product-details-component.html
+++ b/src/app/features/shopping/product-details-component/product-details-component.html
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <!-- Action Buttons (REMOVED Buy Now) -->
+        <!-- Action Buttons -->
         <div class="action-buttons">
           <button 
             mat-raised-button 
@@ -139,7 +139,15 @@
             Add to Cart
           </button>
           
-          <!-- REMOVED: Buy Now Button -->
+          <!-- NEW: Add to Wishlist Button -->
+          <button 
+            mat-raised-button 
+            color="accent" 
+            class="add-to-wishlist-btn"
+            (click)="addToWishlist()">
+            <mat-icon>favorite</mat-icon>
+            Add to Wishlist
+          </button>
         </div>
 
         <!-- Product Specs -->
