--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,3 +73,18 @@ button.mat-mdc-icon-button {
 .mdc-notched-outline__notch {
   border-right-style: none;
 }
+
+.snackbar-success {
+  background: #4caf50 !important;
+  color: #fff;
+}
+
+.snackbar-error {
+  background: #f44336 !important;
+  color: #fff;
+}
+
+.snackbar-warn {
+  background: #ff9800 !important;
+  color: #fff;
+}
